added transparency to modal

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         #map {
             height: 100vh;
         }
+
+        .modal-content {
+            opacity: 0.5;
+        }
     </style>
 </head>
 <body>
